--- a/7-EdgeLedger-Website-Flexbox/css/utilities.css
+++ b/7-EdgeLedger-Website-Flexbox/css/utilities.css
@@ -140,8 +140,13 @@
   padding: 0 4px;
 }
 
-.flex-grid .column {
-  flex: 25%;
+.flex-grid .row a {
   max-width: 25%;
   padding: 0 4px;
 }
+
+/* .flex-grid .column {
+  flex: 25%;
+  max-width: 25%;
+  padding: 0 4px;
+} */
